Recover publisher timeout (#30)
* starting trx consumer only after context built

* health indicator to signal as not ready if there are not more subscriber

* notifying error occurred when publishing results

* commit only after message processed in all consumers

* storing id inside transaction entity

* logging committed and published logs in tests

Co-authored-by: anttorre <antonio.torre@everis.com>